# ocx-geometry-tests

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: conf.py  modules.rst
ocx_geometry_tests/: __init__.py  cli.py
tests/: conftest.py  test_cli.py
