[project.urls]
"Homepage" = "OCXStandard/ocx-geometry-tests"
"Bug Tracker" = "OCXStandard/ocx-geometry-tests/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ocx_geometry_tests"
version = "0.1.0"
description = "Python scripts for creating 3Docx models with different geometry attributes for interoperability testing."
authors = ["Ole CHristian Astrup <ole.christian.astrup@dnv.com>"]
readme = "README.md"
packages = [{include = "ocx_geometry_tests"}]

[tool.poetry.dependencies]
python = "^3.9"
packaging = "^23.1"
tbump = '*'
typer = "*"
rich = "*"
loguru = "*"
ocx = "*"


[tool.poetry.group.development.dependencies]
pre-commit = "*"
sourcery = '*'

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-regressions ="*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-autodoc-typehints = "*"
sphinx_rtd_theme = "*"
sphinx-click = "*"
sphinx_automodapi = "*"

[tool.poetry.scripts]
ocx-geometry = "ocx_geometry_tests.cli:ocx-geometry"

[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "OCXStandard/ocx-geometry-tests"

[tool.tbump.version]
current = "0.1.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (
    (?P<extra>.+)
  )?
  '''


[[tool.tbump.field]]
# the name of the field
name = "extra"
# the default value to use, if there is no match
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "./ocx-geometry-tests/__init__.py"

[[tool.tbump.file]]
src = "./docs/conf.py"

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

# Or run some commands after the git tag and the branch
# have been pushed:
# [[tool.tbump.after_push]]
# name = "build"
# cmd = "poetry build"
